--- a/index.html
+++ b/index.html
@@ -4,13 +4,20 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta name="description" content="Archive of Managing Money Coursera Course">
       <meta name="keywords" content="coursera, money, managing-money, personal-finance, finance, archive, learning, course, online-course, free-course, free, creative-commons">
-
       <meta name="robots" content="index, follow">
       <meta name="author" content="Suryaansh Chawla">
       <title>Managing-Money-Course</title>
       <link rel="icon" href="favicon.jpg" type="image/x-icon">
       <link rel="shortcut icon" href="favicon.jpg" type="image/x-icon">
+      <link rel="stylesheet" href="style.css">
     </head>
+
+    <body>
+    <!-- a list on the right side containing syllabus (can be hidden), the main video and then quiz in the middle -->
+    <div class="sidebar" id = "syllabus">
+      <h2>Syllabus</h2>
+    </div>
+    </body>
 
 </html>
 
