--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     </head>
 
     <body>
+      <h1 align = "center">Managing Money - MBA insights for college students</h1>
     <!-- a list on the right side containing syllabus (can be hidden), the main video and then quiz in the middle -->
     <div class="sidebar" id = "syllabus">
       <h2>Syllabus</h2>
