--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       <link rel="icon" href="favicon.jpg" type="image/x-icon">
       <link rel="shortcut icon" href="favicon.jpg" type="image/x-icon">
       <link rel="stylesheet" href="style.css">
+      <script src="script.js"></script>
     </head>
 
     <body>
