--- a/index.html
+++ b/index.html
@@ -10,12 +10,27 @@
       <link rel="icon" href="favicon.jpg" type="image/x-icon">
       <link rel="shortcut icon" href="favicon.jpg" type="image/x-icon">
       <link rel="stylesheet" href="style.css">
-      <script src="script.js"></script>
     </head>
 
     <body>
       <h1 align = "center">Managing Money - MBA insights for college students</h1>
-    <!-- a list on the right side containing syllabus (can be hidden), the main video and then quiz in the middle -->
+      <!-- a list on the right side containing syllabus (can be hidden), the main video and then quiz in the middle -->
+
+      <h2>What's in Your Budget</h2>
+        <h3>Course Overview and Introduction</h3>
+          <h4>Course Overview</h4>
+            <div class="introduction" id="course-overview">
+            This course will introduce college students in a practical way to the world of personal finance as well as time and career manage    ment. It will provide students with a useful set of tools from economics and finance that will allow them to move forward into the world upon graduation with a solid     foundation in managing their money, time, and career.
+            </div>
+
+
+          <h4>Course Format</h4>
+
+
+
+
+     
+
     </body>
 
 </html>
