add collapsible button and move css and script to respective files

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       <link rel="icon" href="favicon.jpg" type="image/x-icon">
       <link rel="shortcut icon" href="favicon.jpg" type="image/x-icon">
       <link rel="stylesheet" href="style.css">
+      <script src="script.js"></script>
     </head>
 
     <body>
@@ -17,7 +18,8 @@
         <!-- a list on the right side containing syllabus (can be hidden), the main video and then quiz in the middle -->
 
 
-        <button type="button" class="collapsible">Open Collapsible</button>
+        <button type="button" class="collapsible">Course Overview</button>
+        
 
 
             <div class="heading" id="overview">
