add vid src heading

--- a/02_course-instructors_instructions.html
+++ b/02_course-instructors_instructions.html
@@ -50,6 +50,10 @@
     </p>
 
 
+    <h3>Course Introduction Video</h3>
+    <video src=""></video>
+
+
     <style>
     body {
         padding: 50px 85px 50px 85px;
@@ -85,5 +89,7 @@
         border: 1px solid #ccc;
     }
     </style>
+
+    <a href="index.html">Go back to main page</a>
 </html>
 
