--- a/02_course-instructors_instructions.html
+++ b/02_course-instructors_instructions.html
@@ -51,7 +51,7 @@
 
 
     <h3>Course Introduction Video</h3>
-    <video src=""></video>
+    <video src="03_course-introduction-video.mp4"></video>
 
 
     <style>
