add cdn link hc

--- a/02_course-instructors_instructions.html
+++ b/02_course-instructors_instructions.html
@@ -51,7 +51,7 @@
 
 
     <h3>Course Introduction Video</h3>
-    <video src="03_course-introduction-video.mp4"></video>
+    <video src="https://cloud-r302pfuub-hack-club-bot.vercel.app/003_course-introduction-video.mp4"></video>
 
 
     <style>
