--- a/02_course-instructors_instructions.html
+++ b/02_course-instructors_instructions.html
@@ -91,5 +91,7 @@
     </style>
 <br>
     <a href="index.html">Go back to main page</a>
+<br>
+    <a href="module1.html">Move to Module 1: </a>
 </html>
 
