--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <li><a href="02-To-credit-or-debit.html">To credit or to debit that's the question</a></li>
                 <li><a href="03-creditscore.html">To build your credit - boost your credit score</a></li>
                 <li><a href="04-loans.html">What is the deal with loans</a></li>
-                <li>><a href="05-saving-and-insvestment.html">Saving and investments basics</a></li>
+                <li><a href="05-saving-and-insvestment.html">Saving and investments basics</a></li>
                 <li><a href="06-stockmarket.html">A simulating guide to the stock market</a></li>
                 <li><a href="07-taxes.html">So do I have to start paying taxes now</a></li>
                 <li><a href="08-insurance.html">I too young to mess with insurance</a></li>
