add html of page 2

--- a/02-To-credit-or-debit.html
+++ b/02-To-credit-or-debit.html
@@ -13,4 +13,21 @@
       <script src="script.js"></script>
     </head>
 
+    <h1>Lecture 2: To Credit or to Debit</h1>
+    Introduction
+      <video src="course/02_to-credit-or-debit-card-thats-the-question/01_to-credit-or-debit-card-thats-the-question/01_module-2-introduction.mp4"></video>
+
+    Part 1
+      <video src="course/02_to-credit-or-debit-card-thats-the-question/01_to-credit-or-debit-card-thats-the-question/02_to-credit-or-debit-card-thats-the-question-part-1.mp4"></video>
+    Part 2
+      <video src="course/02_to-credit-or-debit-card-thats-the-question/01_to-credit-or-debit-card-thats-the-question/03_to-credit-or-debit-card-thats-the-question-part-2.mp4"></video>
+    Part 3
+      <video src="course/02_to-credit-or-debit-card-thats-the-question/01_to-credit-or-debit-card-thats-the-question/04_to-credit-or-debit-card-thats-the-question-part-3.mp4"></video>
+            
+      
+  <footer>
+      <a href="index.html">Go to previous page</a>
+      <a href="index.html">Go to homepage</a>
+      <a href="02-To-credit-or-debit.html">Go the next page</a>
+  </footer>
 </html>
