add lects to #cdn and add src of some

--- a/02-To-credit-or-debit.html
+++ b/02-To-credit-or-debit.html
@@ -16,10 +16,10 @@
   <body>
     <h1>Lecture 2: To Credit or to Debit</h1>
     Introduction
-      <video src="course/02_to-credit-or-debit-card-thats-the-question/01_to-credit-or-debit-card-thats-the-question/01_module-2-introduction.mp4"></video>
+      <video src="https://cloud-kv76meuis-hack-club-bot.vercel.app/001_module-2-introduction.mp4"></video>
 
     Part 1
-      <video src="course/02_to-credit-or-debit-card-thats-the-question/01_to-credit-or-debit-card-thats-the-question/02_to-credit-or-debit-card-thats-the-question-part-1.mp4"></video>
+      <video src="https://cloud-kv76meuis-hack-club-bot.vercel.app/102_to-credit-or-debit-card-thats-the-question-part-1.mp4"></video>
     Part 2
       <video src="course/02_to-credit-or-debit-card-thats-the-question/01_to-credit-or-debit-card-thats-the-question/03_to-credit-or-debit-card-thats-the-question-part-2.mp4"></video>
     Part 3
