add src links to vercel

--- a/02-To-credit-or-debit.html
+++ b/02-To-credit-or-debit.html
@@ -21,9 +21,9 @@
     Part 1
       <video src="https://cloud-kv76meuis-hack-club-bot.vercel.app/102_to-credit-or-debit-card-thats-the-question-part-1.mp4"></video>
     Part 2
-      <video src="course/02_to-credit-or-debit-card-thats-the-question/01_to-credit-or-debit-card-thats-the-question/03_to-credit-or-debit-card-thats-the-question-part-2.mp4"></video>
+      <video src="https://cloud-kv76meuis-hack-club-bot.vercel.app/203_to-credit-or-debit-card-thats-the-question-part-2.mp4"></video>
     Part 3
-      <video src="course/02_to-credit-or-debit-card-thats-the-question/01_to-credit-or-debit-card-thats-the-question/04_to-credit-or-debit-card-thats-the-question-part-3.mp4"></video>
+      <video src="https://cloud-kv76meuis-hack-club-bot.vercel.app/304_to-credit-or-debit-card-thats-the-question-part-3.mp4"></video>
   
   </body>        
       
