--- a/04-loans.html
+++ b/04-loans.html
@@ -16,14 +16,14 @@
     <body>
       <h1>Lecture 3: How to build your credit and boost your credit score</h1>
       Introduction
-        <video src="course/04_whats-the-deal-with-loans/01_whats-the-deal-with-loans/01_module-4-introduction.mp4"></video>
+        <video src="https://cloud-pvfkguced-hack-club-bot.vercel.app/001_module-4-introduction.mp4"></video>
   
       Part 1
-        <video src="course/04_whats-the-deal-with-loans/01_whats-the-deal-with-loans/02_whats-the-deal-with-loans-part-1.mp4"></video>
+        <video src="https://cloud-pvfkguced-hack-club-bot.vercel.app/102_whats-the-deal-with-loans-part-1.mp4"></video>
       Part 2
-        <video src="course/04_whats-the-deal-with-loans/01_whats-the-deal-with-loans/03_whats-the-deal-with-loans-part-2.mp4"></video>
+        <video src="https://cloud-pvfkguced-hack-club-bot.vercel.app/203_whats-the-deal-with-loans-part-2.mp4"></video>
       Part 3
-        <video src="course/04_whats-the-deal-with-loans/01_whats-the-deal-with-loans/04_whats-the-deal-with-loans-part-3.mp4"></video>
+        <video src="https://cloud-pvfkguced-hack-club-bot.vercel.app/304_whats-the-deal-with-loans-part-3.mp4"></video>
     
       
     </body>
