--- a/06-stockmarket.html
+++ b/06-stockmarket.html
@@ -16,14 +16,14 @@
     <body>
       <h1>Lecture 6: A simulating guide to the Stock Market</h1>
       Introduction
-        <video src="course/03_how-to-build-your-credit-boost-your-credit-score/01_how-to-build-your-credit-boost-your-credit-score/01_module-3-introduction.mp4"></video>
+        <video src="https://cloud-avrryznzv-hack-club-bot.vercel.app/001_module-6-introduction.mp4"></video>
   
       Part 1
-        <video src="course/03_how-to-build-your-credit-boost-your-credit-score/01_how-to-build-your-credit-boost-your-credit-score/02_how-to-build-your-credit-boost-your-credit-score-part-1.mp4"></video>
+        <video src="https://cloud-avrryznzv-hack-club-bot.vercel.app/102_a-simulating-guide-to-the-stock-market-part-1.mp4"></video>
       Part 2
-        <video src="course/03_how-to-build-your-credit-boost-your-credit-score/01_how-to-build-your-credit-boost-your-credit-score/03_how-to-build-your-credit-boost-your-credit-score-part-2.mp4"></video>
+        <video src="https://cloud-avrryznzv-hack-club-bot.vercel.app/203_a-simulating-guide-to-the-stock-market-part-2.mp4"></video>
       Part 3
-        <video src="course/03_how-to-build-your-credit-boost-your-credit-score/01_how-to-build-your-credit-boost-your-credit-score/04_how-to-build-your-credit-boost-your-credit-score-part-3.mp4"></video>
+        <video src="https://cloud-avrryznzv-hack-club-bot.vercel.app/304_a-simulating-guide-to-the-stock-market-part-3.mp4"></video>
     
       
     </body>
