--- a/10-best-of-MBAs.html
+++ b/10-best-of-MBAs.html
@@ -17,14 +17,14 @@
     <body>
       <h1>Lecture 3: How to build your credit and boost your credit score</h1>
       Introduction
-        <video src="course/03_how-to-build-your-credit-boost-your-credit-score/01_how-to-build-your-credit-boost-your-credit-score/01_module-3-introduction.mp4"></video>
+        <video src="https://cloud-a54klg3dm-hack-club-bot.vercel.app/001_module-10-introduction.mp4"></video>
   
       Part 1
-        <video src="course/03_how-to-build-your-credit-boost-your-credit-score/01_how-to-build-your-credit-boost-your-credit-score/02_how-to-build-your-credit-boost-your-credit-score-part-1.mp4"></video>
+        <video src="https://cloud-a54klg3dm-hack-club-bot.vercel.app/102_what-the-best-mbas-know-part-1.mp4"></video>
       Part 2
-        <video src="course/03_how-to-build-your-credit-boost-your-credit-score/01_how-to-build-your-credit-boost-your-credit-score/03_how-to-build-your-credit-boost-your-credit-score-part-2.mp4"></video>
+        <video src="https://cloud-a54klg3dm-hack-club-bot.vercel.app/203_what-the-best-mbas-know-part-2.mp4"></video>
       Part 3
-        <video src="course/03_how-to-build-your-credit-boost-your-credit-score/01_how-to-build-your-credit-boost-your-credit-score/04_how-to-build-your-credit-boost-your-credit-score-part-3.mp4"></video>
+        <video src="https://cloud-a54klg3dm-hack-club-bot.vercel.app/304_what-the-best-mbas-know-part-3.mp4"></video>
     
       
     </body>
