--- a/05-saving-and-insvestment.html
+++ b/05-saving-and-insvestment.html
@@ -17,14 +17,14 @@
     <body>
       <h1>Lecture 4: Some Savings and Investments Basics</h1>
       Introduction
-        <video src="course/05_some-saving-and-investment-basics/01_some-saving-and-investment-basics/01_module-5-introduction.mp4"></video>
+        <video src="https://cloud-3wtl23vyt-hack-club-bot.vercel.app/001_module-5-introduction.mp4"></video>
   
       Part 1
-        <video src="course/05_some-saving-and-investment-basics/01_some-saving-and-investment-basics/02_some-saving-and-investment-basics-part-1.mp4"></video>
+        <video src="https://cloud-3wtl23vyt-hack-club-bot.vercel.app/102_some-saving-and-investment-basics-part-1.mp4"></video>
       Part 2
-        <video src="course/"></video>
+        <video src="https://cloud-3wtl23vyt-hack-club-bot.vercel.app/203_some-saving-and-investment-basics-part-2.mp4"></video>
       Part 3
-        <video src="course/03_how-to-build-your-credit-boost-your-credit-score/01_how-to-build-your-credit-boost-your-credit-score/04_how-to-build-your-credit-boost-your-credit-score-part-3.mp4"></video>
+        <video src="https://cloud-3wtl23vyt-hack-club-bot.vercel.app/304_some-saving-and-investment-basics-part-3.mp4"></video>
     
       
     </body>
