--- a/07-taxes.html
+++ b/07-taxes.html
@@ -17,14 +17,14 @@
     <body>
       <h1>Lecture 7: So do I have to start paying Taxes now</h1>
       Introduction
-        <video src="course/03_how-to-build-your-credit-boost-your-credit-score/01_how-to-build-your-credit-boost-your-credit-score/01_module-3-introduction.mp4"></video>
+        <video src="https://cloud-95ouwzn3e-hack-club-bot.vercel.app/001_module-7-introduction.mp4"></video>
   
       Part 1
-        <video src="course/03_how-to-build-your-credit-boost-your-credit-score/01_how-to-build-your-credit-boost-your-credit-score/02_how-to-build-your-credit-boost-your-credit-score-part-1.mp4"></video>
+        <video src="https://cloud-95ouwzn3e-hack-club-bot.vercel.app/102_so-do-i-have-to-start-paying-taxes-now-part-1.mp4"></video>
       Part 2
-        <video src="course/03_how-to-build-your-credit-boost-your-credit-score/01_how-to-build-your-credit-boost-your-credit-score/03_how-to-build-your-credit-boost-your-credit-score-part-2.mp4"></video>
+        <video src="https://cloud-95ouwzn3e-hack-club-bot.vercel.app/203_so-do-i-have-to-start-paying-taxes-now-part-2.mp4"></video>
       Part 3
-        <video src="course/03_how-to-build-your-credit-boost-your-credit-score/01_how-to-build-your-credit-boost-your-credit-score/04_how-to-build-your-credit-boost-your-credit-score-part-3.mp4"></video>
+        <video src="https://cloud-95ouwzn3e-hack-club-bot.vercel.app/304_so-do-i-have-to-start-paying-taxes-now-part-3.mp4"></video>
     
       
     </body>
