--- a/08-insurance.html
+++ b/08-insurance.html
@@ -17,14 +17,14 @@
     <body>
       <h1>Lecture 3: How to build your credit and boost your credit score</h1>
       Introduction
-        <video src="course/03_how-to-build-your-credit-boost-your-credit-score/01_how-to-build-your-credit-boost-your-credit-score/01_module-3-introduction.mp4"></video>
+        <video src="https://cloud-ft6y3yxbk-hack-club-bot.vercel.app/001_module-8-introduction.mp4"></video>
   
       Part 1
-        <video src="course/03_how-to-build-your-credit-boost-your-credit-score/01_how-to-build-your-credit-boost-your-credit-score/02_how-to-build-your-credit-boost-your-credit-score-part-1.mp4"></video>
+        <video src="https://cloud-ft6y3yxbk-hack-club-bot.vercel.app/102_am-i-too-young-to-mess-with-insurance-part-1.mp4"></video>
       Part 2
-        <video src="course/03_how-to-build-your-credit-boost-your-credit-score/01_how-to-build-your-credit-boost-your-credit-score/03_how-to-build-your-credit-boost-your-credit-score-part-2.mp4"></video>
+        <video src="https://cloud-ft6y3yxbk-hack-club-bot.vercel.app/203_am-i-too-young-to-mess-with-insurance-part-2.mp4"></video>
       Part 3
-        <video src="course/03_how-to-build-your-credit-boost-your-credit-score/01_how-to-build-your-credit-boost-your-credit-score/04_how-to-build-your-credit-boost-your-credit-score-part-3.mp4"></video>
+        <video src="https://cloud-ft6y3yxbk-hack-club-bot.vercel.app/304_am-i-too-young-to-mess-with-insurance-part-3.mp4"></video>
     
       
     </body>
