--- a/09-enterprenuership.html
+++ b/09-enterprenuership.html
@@ -17,14 +17,14 @@
     <body>
       <h1>Lecture 3: How to build your credit and boost your credit score</h1>
       Introduction
-        <video src="course/03_how-to-build-your-credit-boost-your-credit-score/01_how-to-build-your-credit-boost-your-credit-score/01_module-3-introduction.mp4"></video>
+        <video src="https://cloud-anr1wt8wd-hack-club-bot.vercel.app/001_module-9-introduction.mp4"></video>
   
       Part 1
-        <video src="course/03_how-to-build-your-credit-boost-your-credit-score/01_how-to-build-your-credit-boost-your-credit-score/02_how-to-build-your-credit-boost-your-credit-score-part-1.mp4"></video>
+        <video src="https://cloud-anr1wt8wd-hack-club-bot.vercel.app/102_so-you-want-to-be-an-entrepreneur-part-1.mp4"></video>
       Part 2
-        <video src="course/03_how-to-build-your-credit-boost-your-credit-score/01_how-to-build-your-credit-boost-your-credit-score/03_how-to-build-your-credit-boost-your-credit-score-part-2.mp4"></video>
+        <video src="https://cloud-anr1wt8wd-hack-club-bot.vercel.app/203_so-you-want-to-be-an-entrepreneur-part-2.mp4"></video>
       Part 3
-        <video src="course/03_how-to-build-your-credit-boost-your-credit-score/01_how-to-build-your-credit-boost-your-credit-score/04_how-to-build-your-credit-boost-your-credit-score-part-3.mp4"></video>
+        <video src="https://cloud-anr1wt8wd-hack-club-bot.vercel.app/304_so-you-want-to-be-an-entrepreneur-part-3.mp4"></video>
     
       
     </body>
@@ -33,7 +33,7 @@
       <a href="08-insurance.html">Go to previous page</a>
       <a href="index.html">Go to homepage</a>
       <a href="10-best-of-MBAs.html">Go the next page</a>
-  </footer>
+    </footer>
 
 
 </html>
