fix titles of each page

--- a/04-loans.html
+++ b/04-loans.html
@@ -14,7 +14,7 @@
     </head>
 
     <body>
-      <h1>Lecture 3: How to build your credit and boost your credit score</h1>
+      <h1>Lecture 4: Whats the deal with Loans</h1>
       Introduction
         <video src="https://cloud-pvfkguced-hack-club-bot.vercel.app/001_module-4-introduction.mp4"></video>
   
