--- a/08-insurance.html
+++ b/08-insurance.html
@@ -15,7 +15,7 @@
 
     
     <body>
-      <h1>Lecture 3: How to build your credit and boost your credit score</h1>
+      <h1>Lecture 8: Am I too young to mess with Insurance</h1>
       Introduction
         <video src="https://cloud-ft6y3yxbk-hack-club-bot.vercel.app/001_module-8-introduction.mp4"></video>
   
