--- a/09-enterprenuership.html
+++ b/09-enterprenuership.html
@@ -15,7 +15,7 @@
 
    
     <body>
-      <h1>Lecture 3: How to build your credit and boost your credit score</h1>
+      <h1>Lecture 9: So you want to be an Enterprenuer/h1>
       Introduction
         <video src="https://cloud-anr1wt8wd-hack-club-bot.vercel.app/001_module-9-introduction.mp4"></video>
   
