--- a/10-best-of-MBAs.html
+++ b/10-best-of-MBAs.html
@@ -15,7 +15,7 @@
 
     
     <body>
-      <h1>Lecture 3: How to build your credit and boost your credit score</h1>
+      <h1>Lecture 10: What the best MBAs know</h1>
       Introduction
         <video src="https://cloud-a54klg3dm-hack-club-bot.vercel.app/001_module-10-introduction.mp4"></video>
   
