add add css and headings

--- a/01-what-is-in-your-budget.html
+++ b/01-what-is-in-your-budget.html
@@ -15,14 +15,14 @@
 
     <body>
         <h1>Lecture 1: Whats in your budget</h1>
-        Introduction
+        <h2>Introduction</h2>
           <video src="https://cloud-f5g2304jw-hack-club-bot.vercel.app/101_module-1-introduction.mp4"></video>
     
-        Part 1
+        <h2>Part 1</h2>
           <video src="https://cloud-f5g2304jw-hack-club-bot.vercel.app/202_whats-in-your-budget-part-1.mp4"></video>
-        Part 2
+        <h2>Part 2</h2>
           <video src="https://cloud-f5g2304jw-hack-club-bot.vercel.app/303_whats-in-your-budget-part-2.mp4"></video>
-        Part 3
+        <h2>Part 3</h2>
           <video src="https://cloud-f5g2304jw-hack-club-bot.vercel.app/404_whats-in-your-budget-part-3.mp4"></video>
       
       </body>        
