--- a/02-To-credit-or-debit.html
+++ b/02-To-credit-or-debit.html
@@ -15,14 +15,16 @@
     
   <body>
     <h1>Lecture 2: To Credit or to Debit</h1>
-    Introduction
+    <h2>Introduction</h2>
       <video src="https://cloud-kv76meuis-hack-club-bot.vercel.app/001_module-2-introduction.mp4"></video>
-
-    Part 1
+<br>
+    <h2>Part 1</h2>
       <video src="https://cloud-kv76meuis-hack-club-bot.vercel.app/102_to-credit-or-debit-card-thats-the-question-part-1.mp4"></video>
-    Part 2
+    <br>
+      <h2>Part 2</h2>
       <video src="https://cloud-kv76meuis-hack-club-bot.vercel.app/203_to-credit-or-debit-card-thats-the-question-part-2.mp4"></video>
-    Part 3
+    <br>
+      <h2>Part 3</h2>
       <video src="https://cloud-kv76meuis-hack-club-bot.vercel.app/304_to-credit-or-debit-card-thats-the-question-part-3.mp4"></video>
   
   </body>        
