--- a/04-loans.html
+++ b/04-loans.html
@@ -15,14 +15,16 @@
 
     <body>
       <h1>Lecture 4: Whats the deal with Loans</h1>
-      Introduction
+      <h2>Introduction</h2>
         <video src="https://cloud-pvfkguced-hack-club-bot.vercel.app/001_module-4-introduction.mp4"></video>
-  
-      Part 1
+  <br>
+      <h2>Part 1</h2>
         <video src="https://cloud-pvfkguced-hack-club-bot.vercel.app/102_whats-the-deal-with-loans-part-1.mp4"></video>
-      Part 2
+      <br>
+        <h2>Part 2</h2>
         <video src="https://cloud-pvfkguced-hack-club-bot.vercel.app/203_whats-the-deal-with-loans-part-2.mp4"></video>
-      Part 3
+      <br>
+        <h2>Part 3</h2>
         <video src="https://cloud-pvfkguced-hack-club-bot.vercel.app/304_whats-the-deal-with-loans-part-3.mp4"></video>
     
       
