--- a/06-stockmarket.html
+++ b/06-stockmarket.html
@@ -15,14 +15,16 @@
 
     <body>
       <h1>Lecture 6: A simulating guide to the Stock Market</h1>
-      Introduction
+      <h2>Introduction</h2>
         <video src="https://cloud-avrryznzv-hack-club-bot.vercel.app/001_module-6-introduction.mp4"></video>
-  
-      Part 1
+  <br>
+      <h2>Part 1</h2>
         <video src="https://cloud-avrryznzv-hack-club-bot.vercel.app/102_a-simulating-guide-to-the-stock-market-part-1.mp4"></video>
-      Part 2
+      <br>
+        <h2>Part 2</h2>
         <video src="https://cloud-avrryznzv-hack-club-bot.vercel.app/203_a-simulating-guide-to-the-stock-market-part-2.mp4"></video>
-      Part 3
+      <br>
+        <h2>Part 3</h2>
         <video src="https://cloud-avrryznzv-hack-club-bot.vercel.app/304_a-simulating-guide-to-the-stock-market-part-3.mp4"></video>
     
       
