--- a/07-taxes.html
+++ b/07-taxes.html
@@ -16,14 +16,16 @@
   
     <body>
       <h1>Lecture 7: So do I have to start paying Taxes now</h1>
-      Introduction
+      <h2>Introduction</h2>
         <video src="https://cloud-95ouwzn3e-hack-club-bot.vercel.app/001_module-7-introduction.mp4"></video>
-  
-      Part 1
+  <br>
+      <h2>Part 1</h2>
         <video src="https://cloud-95ouwzn3e-hack-club-bot.vercel.app/102_so-do-i-have-to-start-paying-taxes-now-part-1.mp4"></video>
-      Part 2
+     <br>
+      <h2>  Part 2</h2>
         <video src="https://cloud-95ouwzn3e-hack-club-bot.vercel.app/203_so-do-i-have-to-start-paying-taxes-now-part-2.mp4"></video>
-      Part 3
+     <br>
+      <h2>Part 3</h2>
         <video src="https://cloud-95ouwzn3e-hack-club-bot.vercel.app/304_so-do-i-have-to-start-paying-taxes-now-part-3.mp4"></video>
     
       
