--- a/09-enterprenuership.html
+++ b/09-enterprenuership.html
@@ -16,14 +16,16 @@
    
     <body>
       <h1>Lecture 9: So you want to be an Enterprenuer/h1>
-      Introduction
+      <h2>Introduction</h2>
         <video src="https://cloud-anr1wt8wd-hack-club-bot.vercel.app/001_module-9-introduction.mp4"></video>
-  
-      Part 1
+  <br>
+      <h2>Part 1</h2>
         <video src="https://cloud-anr1wt8wd-hack-club-bot.vercel.app/102_so-you-want-to-be-an-entrepreneur-part-1.mp4"></video>
-      Part 2
+      <br>
+      <h2>Part 2</h2>
         <video src="https://cloud-anr1wt8wd-hack-club-bot.vercel.app/203_so-you-want-to-be-an-entrepreneur-part-2.mp4"></video>
-      Part 3
+      <br>
+      <h2>Part 3</h2>
         <video src="https://cloud-anr1wt8wd-hack-club-bot.vercel.app/304_so-you-want-to-be-an-entrepreneur-part-3.mp4"></video>
     
       
