--- a/03-creditscore.html
+++ b/03-creditscore.html
@@ -15,14 +15,16 @@
 
     <body>
       <h1>Lecture 3: How to build your credit and boost your credit score</h1>
-      Introduction
+      <h2>Introduction</h2>
         <video src="https://cloud-ngtq4fcvn-hack-club-bot.vercel.app/001_module-3-introduction.mp4"></video>
-  
-      Part 1
+  <br>
+      <h2>Part 1</h2>
         <video src="https://cloud-ngtq4fcvn-hack-club-bot.vercel.app/102_how-to-build-your-credit-boost-your-credit-score-part-1.mp4"></video>
-      Part 2
+      <br>
+        <h2>Part 2</h2>
         <video src="https://cloud-ngtq4fcvn-hack-club-bot.vercel.app/203_how-to-build-your-credit-boost-your-credit-score-part-2.mp4"></video>
-      Part 3
+      <br>
+        <h2>Part 3</h2>
         <video src="https://cloud-ngtq4fcvn-hack-club-bot.vercel.app/304_how-to-build-your-credit-boost-your-credit-score-part-3.mp4"></video>
     
       
