add module 1 exercise

--- a/01-what-is-in-your-budget.html
+++ b/01-what-is-in-your-budget.html
@@ -25,6 +25,89 @@
         <h2>Part 3</h2>
           <video src="https://cloud-f5g2304jw-hack-club-bot.vercel.app/404_whats-in-your-budget-part-3.mp4"></video>
       
+
+          <meta charset="utf-8"/>
+<co-content>
+ <h1 level="1">
+  Module 1
+ </h1>
+ <p>
+  Build your skills by doing these exercises on your own...
+ </p>
+ <ol bullettype="numbers">
+  <li>
+   <p>
+    For the previous month, list all of your sources of income and all of your expenses on a spreadsheet. Compare them and see if you are running a surplus or a deficit. Did you have any funds left over to save or invest? How did you handle those funds?
+   </p>
+  </li>
+  <li>
+   <p>
+    On your spreadsheet, catalog each of your expenses from the previous month and group them by category. Then, separate those categories into fixed expenses you will have each month and expenses that are discretionary.
+   </p>
+  </li>
+  <li>
+   <p>
+    Look more carefully at your “fixed expenses.” Do you see a way that you could actually reduce some of them? For example, you might be able to cut your utility bill through conservation or your rent by moving to a different apartment. Or you might be able to do some shopping around and find a better cell phone or cable TV plan. Are any of these options worth pursuing so you are able to save more each month?
+   </p>
+  </li>
+  <li>
+   <p>
+    List several big purchases you’d like to make over the next year. Do you have a plan to save for those purchases?
+   </p>
+  </li>
+ </ol>
+ <p>
+ </p>
+</co-content>
+<style>
+ body {
+    padding: 50px 85px 50px 85px;
+}
+
+table th, table td {
+    border: 1px solid #e0e0e0;
+    padding: 5px 20px;
+    text-align: left;
+}
+input {
+    margin: 10px;
+}
+}
+th {
+    font-weight: bold;
+}
+td, th {
+    display: table-cell;
+    vertical-align: inherit;
+}
+img {
+    height: auto;
+    max-width: 100%;
+}
+pre {
+    display: block;
+    margin: 20px;
+    background: #424242;
+    color: #fff;
+    font-size: 13px;
+    white-space: pre-wrap;
+    padding: 9.5px;
+    margin: 0 0 10px;
+    border: 1px solid #ccc;
+}
+</style>
+<script async="" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript">
+</script>
+<script type="text/x-mathjax-config">
+ MathJax.Hub.Config({
+    tex2jax: {
+      inlineMath: [ ['$$','$$'], ['$','$'] ],
+      displayMath: [ ["\\[","\\]"] ],
+      processEscapes: true
+    }
+  });
+</script>
+
       </body>        
           
       <footer>
