--- a/02-To-credit-or-debit.html
+++ b/02-To-credit-or-debit.html
@@ -14,7 +14,7 @@
     </head>
     
   <body>
-    <h1>Lecture 2: To Credit or to Debit</h1>
+    <h1>Lecture 2: To Credit or to Debit</h1><br>
     <h2>Introduction</h2>
       <video src="https://cloud-kv76meuis-hack-club-bot.vercel.app/001_module-2-introduction.mp4"></video>
 <br>
@@ -27,7 +27,7 @@
       <h2>Part 3</h2>
       <video src="https://cloud-kv76meuis-hack-club-bot.vercel.app/304_to-credit-or-debit-card-thats-the-question-part-3.mp4"></video>
   
-
+<br>
       <meta charset="utf-8"/>
 <co-content>
  <h1 level="1">
