--- a/03-creditscore.html
+++ b/03-creditscore.html
@@ -14,7 +14,7 @@
     </head>
 
     <body>
-      <h1>Lecture 3: How to build your credit and boost your credit score</h1>
+      <h1>Lecture 3: How to build your credit and boost your credit score</h1><br>
       <h2>Introduction</h2>
         <video src="https://cloud-ngtq4fcvn-hack-club-bot.vercel.app/001_module-3-introduction.mp4"></video>
   <br>
@@ -26,6 +26,7 @@
       <br>
         <h2>Part 3</h2>
         <video src="https://cloud-ngtq4fcvn-hack-club-bot.vercel.app/304_how-to-build-your-credit-boost-your-credit-score-part-3.mp4"></video>
+      <br>
         <meta charset="utf-8"/>
         <co-content>
          <h1 level="1">
