--- a/04-loans.html
+++ b/04-loans.html
@@ -14,7 +14,7 @@
     </head>
 
     <body>
-      <h1>Lecture 4: Whats the deal with Loans</h1>
+      <h1>Lecture 4: Whats the deal with Loans</h1><br>
       <h2>Introduction</h2>
         <video src="https://cloud-pvfkguced-hack-club-bot.vercel.app/001_module-4-introduction.mp4"></video>
   <br>
@@ -26,7 +26,7 @@
       <br>
         <h2>Part 3</h2>
         <video src="https://cloud-pvfkguced-hack-club-bot.vercel.app/304_whats-the-deal-with-loans-part-3.mp4"></video>
-    
+    <br>
         <meta charset="utf-8"/>
 <co-content>
  <h1 level="1">
