--- a/06-stockmarket.html
+++ b/06-stockmarket.html
@@ -14,7 +14,7 @@
     </head>
 
     <body>
-      <h1>Lecture 6: A simulating guide to the Stock Market</h1>
+      <h1>Lecture 6: A simulating guide to the Stock Market</h1><br>
       <h2>Introduction</h2>
         <video src="https://cloud-avrryznzv-hack-club-bot.vercel.app/001_module-6-introduction.mp4"></video>
   <br>
@@ -26,6 +26,7 @@
       <br>
         <h2>Part 3</h2>
         <video src="https://cloud-avrryznzv-hack-club-bot.vercel.app/304_a-simulating-guide-to-the-stock-market-part-3.mp4"></video>
+        <br>
         <meta charset="utf-8"/>
         <co-content>
          <h1 level="1">
