--- a/10-best-of-MBAs.html
+++ b/10-best-of-MBAs.html
@@ -15,7 +15,7 @@
 
     
     <body>
-      <h1>Lecture 10: What the best MBAs know</h1>
+      <h1>Lecture 10: What the best MBAs know</h1><br>
       <h2>Introduction</h2>
         <video src="https://cloud-a54klg3dm-hack-club-bot.vercel.app/001_module-10-introduction.mp4"></video>
   <br>
@@ -27,6 +27,7 @@
       <br>
       <h2>Part 3</h2>
         <video src="https://cloud-a54klg3dm-hack-club-bot.vercel.app/304_what-the-best-mbas-know-part-3.mp4"></video>
+        <br>
         <meta charset="utf-8"/>
         <co-content>
          <h1 level="1">
