--- a/07-taxes.html
+++ b/07-taxes.html
@@ -15,7 +15,7 @@
 
   
     <body>
-      <h1>Lecture 7: So do I have to start paying Taxes now</h1>
+      <h1>Lecture 7: So do I have to start paying Taxes now</h1><br>
       <h2>Introduction</h2>
         <video src="https://cloud-95ouwzn3e-hack-club-bot.vercel.app/001_module-7-introduction.mp4"></video>
   <br>
@@ -27,6 +27,7 @@
      <br>
       <h2>Part 3</h2>
         <video src="https://cloud-95ouwzn3e-hack-club-bot.vercel.app/304_so-do-i-have-to-start-paying-taxes-now-part-3.mp4"></video>
+        <br>
         <meta charset="utf-8"/>
         <co-content>
          <h1 level="1">
