--- a/08-insurance.html
+++ b/08-insurance.html
@@ -15,7 +15,7 @@
 
     
     <body>
-      <h1>Lecture 8: Am I too young to mess with Insurance</h1>
+      <h1>Lecture 8: Am I too young to mess with Insurance</h1><br>
       <h2>Introduction</h2>
         <video src="https://cloud-ft6y3yxbk-hack-club-bot.vercel.app/001_module-8-introduction.mp4"></video>
   <br>
@@ -27,6 +27,7 @@
     <br>
       <h2>Part 3</h2>
         <video src="https://cloud-ft6y3yxbk-hack-club-bot.vercel.app/304_am-i-too-young-to-mess-with-insurance-part-3.mp4"></video>
+        <br>
         <meta charset="utf-8"/>
         <co-content>
          <h1 level="1">
