fix footer spacing

--- a/01-what-is-in-your-budget.html
+++ b/01-what-is-in-your-budget.html
@@ -114,8 +114,8 @@ pre {
       </body>        
           
       <footer>
-          <a href="index.html">Go to previous page</a>
-          <a href="index.html">Go to homepage</a>
+          <a href="index.html">Go to previous page | </a>
+          <a href="index.html">Go to homepage | </a>
           <a href="03-creditscore.html">Go the next page</a>
       </footer>
 
