--- a/03-creditscore.html
+++ b/03-creditscore.html
@@ -103,8 +103,8 @@
     </body>
 
     <footer>
-      <a href="02-To-credit-or-debit.html">Go to previous page</a>
-      <a href="index.html">Go to homepage</a>
+      <a href="02-To-credit-or-debit.html">Go to previous page | </a>
+      <a href="index.html">Go to homepage | </a>
       <a href="04-loans.html">Go the next page</a>
   </footer>
 
