--- a/04-loans.html
+++ b/04-loans.html
@@ -106,8 +106,8 @@ pre {
     </body>
 
     <footer>
-      <a href="03-creditscore.html">Go to previous page</a>
-      <a href="index.html">Go to homepage</a>
+      <a href="03-creditscore.html">Go to previous page | </a>
+      <a href="index.html">Go to homepage | </a>
       <a href="05-saving-and-insvestment.html">Go the next page</a>
   </footer>
 
