--- a/05-saving-and-insvestment.html
+++ b/05-saving-and-insvestment.html
@@ -108,8 +108,8 @@
     </body>
 
     <footer>
-      <a href="04-loans.html">Go to previous page</a>
-      <a href="index.html">Go to homepage</a>
+      <a href="04-loans.html">Go to previous page | </a>
+      <a href="index.html">Go to homepage | </a>
       <a href="06-stockmarket.html">Go the next page</a>
   </footer>
 
