--- a/06-stockmarket.html
+++ b/06-stockmarket.html
@@ -103,8 +103,8 @@
     </body>
 
     <footer>
-      <a href="05-saving-and-insvestment.html">Go to previous page</a>
-      <a href="index.html">Go to homepage</a>
+      <a href="05-saving-and-insvestment.html">Go to previous page | </a>
+      <a href="index.html">Go to homepage | </a>
       <a href="07-taxes.html">Go the next page</a>
   </footer>
 
