--- a/07-taxes.html
+++ b/07-taxes.html
@@ -109,8 +109,8 @@
     </body>
 
     <footer>
-      <a href="06-stockmarket.html">Go to previous page</a>
-      <a href="index.html">Go to homepage</a>
+      <a href="06-stockmarket.html">Go to previous page | </a>
+      <a href="index.html">Go to homepage | </a>
       <a href="08-insurance.html">Go the next page</a>
   </footer>
 
