--- a/08-insurance.html
+++ b/08-insurance.html
@@ -109,8 +109,8 @@
     </body>
 
     <footer>
-      <a href="07-taxes.html">Go to previous page</a>
-      <a href="index.html">Go to homepage</a>
+      <a href="07-taxes.html">Go to previous page | </a>
+      <a href="index.html">Go to homepage | </a>
       <a href="09-enterprenuership.html">Go the next page</a>
   </footer>
 
