--- a/09-enterprenuership.html
+++ b/09-enterprenuership.html
@@ -110,8 +110,8 @@
     </body>
 
     <footer>
-      <a href="08-insurance.html">Go to previous page</a>
-      <a href="index.html">Go to homepage</a>
+      <a href="08-insurance.html">Go to previous page | </a>
+      <a href="index.html">Go to homepage | </a>
       <a href="10-best-of-MBAs.html">Go the next page</a>
     </footer>
 
