--- a/10-best-of-MBAs.html
+++ b/10-best-of-MBAs.html
@@ -102,7 +102,7 @@
     </body>
 
     <footer>
-      <a href="09-enterprenuership.html">Go to previous page</a>
+      <a href="09-enterprenuership.html">Go to previous page | </a>
       <a href="index.html">Go to homepage</a>
      
   </footer>
