--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <li><a href="06-stockmarket.html">A simulating guide to the stock market</a></li>
                 <li><a href="07-taxes.html">So do I have to start paying taxes now</a></li>
                 <li><a href="08-insurance.html">I too young to mess with insurance</a></li>
-                <li><a href="09-enterprenuership.html">So you want to be an enterpreneur</a></li>
+                <li><a href="09-entrepreneurship.html">So you want to be an entrepreneur</a></li>
                 <li><a href="10-best-of-MBAs.html">What the best MBAs know</a></li>
             </ol>
     
