--- a/01-what-is-in-your-budget.html
+++ b/01-what-is-in-your-budget.html
@@ -17,16 +17,16 @@
         <h1>Lecture 1: Whats in your budget</h1>
         <br>
         <h2>Introduction</h2>
-          <video src="https://cloud-f5g2304jw-hack-club-bot.vercel.app/101_module-1-introduction.mp4"></video>
+        <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/993289428?title=0&amp;byline=0&amp;portrait=0&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="01_module-1-introduction"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
     <br>
         <h2>Part 1</h2>
-          <video src="https://cloud-f5g2304jw-hack-club-bot.vercel.app/202_whats-in-your-budget-part-1.mp4"></video>
+        <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/993289523?title=0&amp;byline=0&amp;portrait=0&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="02_whats-in-your-budget-part-1"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
         <br>
           <h2>Part 2</h2>
-          <video src="https://cloud-f5g2304jw-hack-club-bot.vercel.app/303_whats-in-your-budget-part-2.mp4"></video>
+          <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/993289619?title=0&amp;byline=0&amp;portrait=0&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="03_whats-in-your-budget-part-2"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
         <br>
           <h2>Part 3</h2>
-          <video src="https://cloud-f5g2304jw-hack-club-bot.vercel.app/404_whats-in-your-budget-part-3.mp4"></video>
+          <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/993289730?title=0&amp;byline=0&amp;portrait=0&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="04_whats-in-your-budget-part-3"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
       
 <br>
           <meta charset="utf-8"/>
