--- a/05-saving-and-insvestment.html
+++ b/05-saving-and-insvestment.html
@@ -17,16 +17,16 @@
     <body>
       <h1>Lecture 5: Some Savings and Investments Basics</h1>
       <h2>Introduction</h2><br>
-        <video src="https://cloud-3wtl23vyt-hack-club-bot.vercel.app/001_module-5-introduction.mp4"></video>
+      <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/993290899?title=0&amp;byline=0&amp;portrait=0&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="01_module-5-introduction"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
   <br>
       <h2>Part 1</h2>
-        <video src="https://cloud-3wtl23vyt-hack-club-bot.vercel.app/102_some-saving-and-investment-basics-part-1.mp4"></video>
+      <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/993290954?title=0&amp;byline=0&amp;portrait=0&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="02_some-saving-and-investment-basics-part-1"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
       <br>
       <h2>Part 2</h2>
-        <video src="https://cloud-3wtl23vyt-hack-club-bot.vercel.app/203_some-saving-and-investment-basics-part-2.mp4"></video>
+      <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/993291036?title=0&amp;byline=0&amp;portrait=0&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="03_some-saving-and-investment-basics-part-2"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
       <br>
        <h2> Part 3</h2>
-        <video src="https://cloud-3wtl23vyt-hack-club-bot.vercel.app/304_some-saving-and-investment-basics-part-3.mp4"></video>
+       <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/993291103?title=0&amp;byline=0&amp;portrait=0&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="04_some-saving-and-investment-basics-part-3"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
     <br>
         <meta charset="utf-8"/>
         <co-content>
