--- a/06-stockmarket.html
+++ b/06-stockmarket.html
@@ -16,16 +16,16 @@
     <body>
       <h1>Lecture 6: A simulating guide to the Stock Market</h1><br>
       <h2>Introduction</h2>
-        <video src="https://cloud-avrryznzv-hack-club-bot.vercel.app/001_module-6-introduction.mp4"></video>
+      <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/993291205?title=0&amp;byline=0&amp;portrait=0&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="01_module-6-introduction"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
   <br>
       <h2>Part 1</h2>
-        <video src="https://cloud-avrryznzv-hack-club-bot.vercel.app/102_a-simulating-guide-to-the-stock-market-part-1.mp4"></video>
+      <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/993291253?title=0&amp;byline=0&amp;portrait=0&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="02_a-simulating-guide-to-the-stock-market-part-1"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
       <br>
         <h2>Part 2</h2>
-        <video src="https://cloud-avrryznzv-hack-club-bot.vercel.app/203_a-simulating-guide-to-the-stock-market-part-2.mp4"></video>
+        <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/993291367?title=0&amp;byline=0&amp;portrait=0&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="03_a-simulating-guide-to-the-stock-market-part-2"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
       <br>
         <h2>Part 3</h2>
-        <video src="https://cloud-avrryznzv-hack-club-bot.vercel.app/304_a-simulating-guide-to-the-stock-market-part-3.mp4"></video>
+        <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/993291474?title=0&amp;byline=0&amp;portrait=0&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="04_a-simulating-guide-to-the-stock-market-part-3"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
         <br>
         <meta charset="utf-8"/>
         <co-content>
