--- a/07-taxes.html
+++ b/07-taxes.html
@@ -17,16 +17,16 @@
     <body>
       <h1>Lecture 7: So do I have to start paying Taxes now</h1><br>
       <h2>Introduction</h2>
-        <video src="https://cloud-95ouwzn3e-hack-club-bot.vercel.app/001_module-7-introduction.mp4"></video>
+      <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/993291549?title=0&amp;byline=0&amp;portrait=0&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="01_module-7-introduction"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
   <br>
       <h2>Part 1</h2>
         <video src="https://cloud-95ouwzn3e-hack-club-bot.vercel.app/102_so-do-i-have-to-start-paying-taxes-now-part-1.mp4"></video>
      <br>
       <h2>  Part 2</h2>
-        <video src="https://cloud-95ouwzn3e-hack-club-bot.vercel.app/203_so-do-i-have-to-start-paying-taxes-now-part-2.mp4"></video>
+      <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/993291615?title=0&amp;byline=0&amp;portrait=0&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="02_so-do-i-have-to-start-paying-taxes-now-part-1"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
      <br>
       <h2>Part 3</h2>
-        <video src="https://cloud-95ouwzn3e-hack-club-bot.vercel.app/304_so-do-i-have-to-start-paying-taxes-now-part-3.mp4"></video>
+      <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/993291766?title=0&amp;byline=0&amp;portrait=0&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="04_so-do-i-have-to-start-paying-taxes-now-part-3"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
         <br>
         <meta charset="utf-8"/>
         <co-content>
