--- a/08-insurance.html
+++ b/08-insurance.html
@@ -17,16 +17,16 @@
     <body>
       <h1>Lecture 8: Am I too young to mess with Insurance</h1><br>
       <h2>Introduction</h2>
-        <video src="https://cloud-ft6y3yxbk-hack-club-bot.vercel.app/001_module-8-introduction.mp4"></video>
+      <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/993291818?title=0&amp;byline=0&amp;portrait=0&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="01_module-8-introduction"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
   <br>
       <h2>Part 1</h2>
-        <video src="https://cloud-ft6y3yxbk-hack-club-bot.vercel.app/102_am-i-too-young-to-mess-with-insurance-part-1.mp4"></video>
+      <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/993291871?title=0&amp;byline=0&amp;portrait=0&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="02_am-i-too-young-to-mess-with-insurance-part-1"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
      <br>
       <h2>Part 2</h2>
-        <video src="https://cloud-ft6y3yxbk-hack-club-bot.vercel.app/203_am-i-too-young-to-mess-with-insurance-part-2.mp4"></video>
+      <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/993292067?title=0&amp;byline=0&amp;portrait=0&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="03_am-i-too-young-to-mess-with-insurance-part-2"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
     <br>
       <h2>Part 3</h2>
-        <video src="https://cloud-ft6y3yxbk-hack-club-bot.vercel.app/304_am-i-too-young-to-mess-with-insurance-part-3.mp4"></video>
+      <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/993292668?title=0&amp;byline=0&amp;portrait=0&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="03_so-you-want-to-be-an-entrepreneur-part-2"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
         <br>
         <meta charset="utf-8"/>
         <co-content>
