--- a/09-entrepreneurship.html
+++ b/09-entrepreneurship.html
@@ -18,16 +18,17 @@
       <h1>Lecture 9: So you want to be an Enterprenuer</h1>
       <br>
       <h2>Introduction</h2>
-        <video src="https://cloud-anr1wt8wd-hack-club-bot.vercel.app/001_module-9-introduction.mp4"></video>
+      <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/993292426?title=0&amp;byline=0&amp;portrait=0&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="01_module-9-introduction"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
   <br>
       <h2>Part 1</h2>
-        <video src="https://cloud-anr1wt8wd-hack-club-bot.vercel.app/102_so-you-want-to-be-an-entrepreneur-part-1.mp4"></video>
+      <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/993292527?title=0&amp;byline=0&amp;portrait=0&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="02_so-you-want-to-be-an-entrepreneur-part-1"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
       <br>
       <h2>Part 2</h2>
-        <video src="https://cloud-anr1wt8wd-hack-club-bot.vercel.app/203_so-you-want-to-be-an-entrepreneur-part-2.mp4"></video>
+      <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/993292668?title=0&amp;byline=0&amp;portrait=0&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="03_so-you-want-to-be-an-entrepreneur-part-2"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+
       <br>
       <h2>Part 3</h2>
-        <video src="https://cloud-anr1wt8wd-hack-club-bot.vercel.app/304_so-you-want-to-be-an-entrepreneur-part-3.mp4"></video>
+      <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/993292800?title=0&amp;byline=0&amp;portrait=0&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="04_so-you-want-to-be-an-entrepreneur-part-3"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
         <meta charset="utf-8"/>
         <br>
         <co-content>
