--- a/10-best-of-MBAs.html
+++ b/10-best-of-MBAs.html
@@ -17,16 +17,15 @@
     <body>
       <h1>Lecture 10: What the best MBAs know</h1><br>
       <h2>Introduction</h2>
-        <video src="https://cloud-a54klg3dm-hack-club-bot.vercel.app/001_module-10-introduction.mp4"></video>
-  <br>
+      <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/993292994?title=0&amp;byline=0&amp;portrait=0&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="01_module-10-introduction"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
       <h2>Part 1</h2>
-        <video src="https://cloud-a54klg3dm-hack-club-bot.vercel.app/102_what-the-best-mbas-know-part-1.mp4"></video>
+      <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/993293090?title=0&amp;byline=0&amp;portrait=0&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="02_what-the-best-mbas-know-part-1"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
       <br>
         <h2>Part 2</h2>
-        <video src="https://cloud-a54klg3dm-hack-club-bot.vercel.app/203_what-the-best-mbas-know-part-2.mp4"></video>
+        <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/993293213?title=0&amp;byline=0&amp;portrait=0&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="03_what-the-best-mbas-know-part-2"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
       <br>
       <h2>Part 3</h2>
-        <video src="https://cloud-a54klg3dm-hack-club-bot.vercel.app/304_what-the-best-mbas-know-part-3.mp4"></video>
+      <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/993293326?title=0&amp;byline=0&amp;portrait=0&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="04_what-the-best-mbas-know-part-3"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
         <br>
         <meta charset="utf-8"/>
         <co-content>
