changed link color to index instead of global page

--- a/index.html
+++ b/index.html
@@ -73,6 +73,10 @@
                 body {
                     padding: 50px 85px 50px 85px;
                 }
+
+		a {
+		    color: aaaaff;
+		}
             
                 table th, table td {
                     border: 1px solid #e0e0e0;
