fix next page link in pg 1

--- a/01-what-is-in-your-budget.html
+++ b/01-what-is-in-your-budget.html
@@ -116,7 +116,7 @@ pre {
       <footer>
           <a href="index.html">Go to previous page | </a>
           <a href="index.html">Go to homepage | </a>
-          <a href="03-creditscore.html">Go the next page</a>
+          <a href="02-To-credit-or-debit.html">Go the next page</a>
       </footer>
 
 </html>
