fix spellings and vids at wrong places

--- a/05-saving-and-insvestment.html
+++ b/05-saving-and-insvestment.html
@@ -6,7 +6,7 @@
       <meta name="keywords" content="coursera, money, managing-money, personal-finance, finance, archive, learning, course, online-course, free-course, free, creative-commons">
       <meta name="robots" content="index, follow">
       <meta name="author" content="Suryaansh Chawla">
-      <title>Managing-Money-Course</title>
+      <title>Lect 5 Managing Money</title>
       <link rel="icon" href="favicon.jpg" type="image/x-icon">
       <link rel="shortcut icon" href="favicon.jpg" type="image/x-icon">
       <link rel="stylesheet" href="style.css">
@@ -39,7 +39,7 @@
          <ol bullettype="numbers">
           <li>
            <p>
-            Visit a website like www.bloomberg.com and find the bonds section. Peruse the various rates listed on bonds of different maturities.Note how the interest rate tends to be higher the longer the maturity of the bond. Why do you think this is so?
+            Visit a website like <a href="https://www.bloomberg.com">www.bloomberg.com</a> and find the bonds section. Peruse the various rates listed on bonds of different maturities.Note how the interest rate tends to be higher the longer the maturity of the bond. Why do you think this is so?
            </p>
           </li>
           <li>
