fix the footer navigation in pg8 and pg2

--- a/08-insurance.html
+++ b/08-insurance.html
@@ -111,7 +111,7 @@
     <footer>
       <a href="07-taxes.html">Go to previous page | </a>
       <a href="index.html">Go to homepage | </a>
-      <a href="09-enterprenuership.html">Go the next page</a>
+      <a href="09-entrepreneurship.html">Go the next page</a>
   </footer>
 
 
