--- a/02-To-credit-or-debit.html
+++ b/02-To-credit-or-debit.html
@@ -113,7 +113,7 @@ pre {
   </body>        
       
   <footer>
-      <a href="index.html">Go to previous page | </a>
+      <a href="01-what-is-in-your-budget.html">Go to previous page | </a>
       <a href="index.html">Go to homepage | </a>
       <a href="03-creditscore.html">Go the next page</a>
   </footer>
