--- a/08-insurance.html
+++ b/08-insurance.html
@@ -26,7 +26,7 @@
       <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/993292067?title=0&amp;byline=0&amp;portrait=0&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="03_am-i-too-young-to-mess-with-insurance-part-2"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
     <br>
       <h2>Part 3</h2>
-      <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/993292668?title=0&amp;byline=0&amp;portrait=0&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="03_so-you-want-to-be-an-entrepreneur-part-2"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+      <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/993292273?title=0&amp;byline=0&amp;portrait=0&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="04_am-i-too-young-to-mess-with-insurance-part-3"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
         <br>
         <meta charset="utf-8"/>
         <co-content>
@@ -111,7 +111,7 @@
     <footer>
       <a href="07-taxes.html">Go to previous page | </a>
       <a href="index.html">Go to homepage | </a>
-      <a href="09-enterprenuership.html">Go the next page</a>
+      <a href="09-entrepreneurship.html">Go the next page</a>
   </footer>
 
 
