change module to assignments

--- a/01-what-is-in-your-budget.html
+++ b/01-what-is-in-your-budget.html
@@ -32,7 +32,7 @@
           <meta charset="utf-8"/>
 <co-content>
  <h1 level="1">
-  Module 1
+  Assignment 1
  </h1>
  <p>
   Build your skills by doing these exercises on your own...
