--- a/06-stockmarket.html
+++ b/06-stockmarket.html
@@ -30,7 +30,7 @@
         <meta charset="utf-8"/>
         <co-content>
          <h1 level="1">
-          Module 6
+          Assignment 6
          </h1>
          <p>
           Build your skills by doing these exercises on your own
