--- a/03-creditscore.html
+++ b/03-creditscore.html
@@ -30,7 +30,7 @@
         <meta charset="utf-8"/>
         <co-content>
          <h1 level="1">
-          Module 3
+          Assignment 3
          </h1>
          <p>
           Build your skills by doing these exercises on your own.
