--- a/05-saving-and-insvestment.html
+++ b/05-saving-and-insvestment.html
@@ -31,7 +31,7 @@
         <meta charset="utf-8"/>
         <co-content>
          <h1 level="1">
-          Module 5
+          Assignment 5
          </h1>
          <p>
           Build your skills by doing these exercises on your own
