--- a/07-taxes.html
+++ b/07-taxes.html
@@ -31,7 +31,7 @@
         <meta charset="utf-8"/>
         <co-content>
          <h1 level="1">
-          Module 7
+          Assignment 7
          </h1>
          <p>
           Build your skills by doing these exercises on your own
