--- a/08-insurance.html
+++ b/08-insurance.html
@@ -31,7 +31,7 @@
         <meta charset="utf-8"/>
         <co-content>
          <h1 level="1">
-          Module 8
+          Assignment 8
          </h1>
          <p>
           Build your skills by doing these exercises on your own
