--- a/09-entrepreneurship.html
+++ b/09-entrepreneurship.html
@@ -33,7 +33,7 @@
         <br><br>
         <co-content>
          <h1 level="1">
-          Module 9
+          Assignment 9
          </h1>
          <p>
           Build your skills by doing these exercises on your own
