--- a/10-best-of-MBAs.html
+++ b/10-best-of-MBAs.html
@@ -30,7 +30,7 @@
         <meta charset="utf-8"/>
         <co-content>
          <h1 level="1">
-          Module 10
+          Assignment 10
          </h1>
          <p>
           Build your skills by doing these exercises on your own
