--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </head>
 
     <body>
-        <h1 align = "center">Managing Money - MBA insights for college students</h1>
+        <h1 align = "center">Managing Money - MBA insights for Undergraduates</h1>
         <!-- a list on the right side containing syllabus (can be hidden), the main video and then quiz in the middle -->
 
 
